--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -2,13 +2,19 @@ div
 h1
   | Signin
 
+
 = form_with model: @user, local: true do |f|
-  = f.label :name
-  = f.text_field :name
-  = f.label :email
-  = f.text_field :email
-  = f.label :password
-  = f.password_field :password
-  = f.label :password_confirmation
-  = f.password_field :password_confirmation
+  = render 'layouts/error_messages', model: f.object
+  div.form-group
+    = f.label :name
+    = f.text_field :name
+  div.form-group
+    = f.label :email
+    = f.text_field :email
+  div.form-group
+    = f.label :password
+    = f.password_field :password
+  div.form-group
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation
   = f.submit t('users.new.signin'), class: %w[btn btn-primary]
