--- a/app/views/layouts/_error_messages.html.slim
+++ b/app/views/layouts/_error_messages.html.slim
@@ -2,5 +2,5 @@
   div.alert.alert-warning
     ul
       - model.errors.full_messages.each do |message|
-        li = message
+        li.font-SoukouMincho = message
  
