--- a/app/views/shared/_flash_message.html.slim
+++ b/app/views/shared/_flash_message.html.slim
@@ -1,3 +1,3 @@
 - flash.each do |message_type, message|
-  div class= "alert alert-#{message_type}"
+  div class= "font-SoukouMincho alert alert-#{message_type}"
     = message
