--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -5,9 +5,10 @@ div.container-fluid.mb-3
   div.bass-image
     = image_tag "/images/chara.jpeg", class: "w-100"
     div.z-in-1.new-task-position.w-20.mx-auto
-      p.text-center.task-border.mx-2.mb-0
-        small.font-SoukouMincho タスク作成
-      div
+      a.btn-task.mx-auto type="button" data-toggle="collapse" data-target="#demo"
+        p.text-center.task-border.mx-2.mb-0
+          small.font-SoukouMincho タスク作成
+      div#demo.collapse.z-in-1.new-task-form-position.w-100
         = form_with model: @task, url: mission_tasks_path(@mission.id),class:"w-75 mx-auto", local: true do |f|
           = render 'layouts/error_messages', model: f.object
           div.form-group.mb-0
@@ -22,31 +23,75 @@ div.container-fluid.mb-3
             div
               = f.submit '作成', class: 'task-new-btn'
       
+    -if @tasks.present?
+      div.task-btn-position
+        - @tasks.each do |task|
+          = render partial: 'task_play_button', locals: {task: task}
+    div.chara_img.font-SoukouMincho
+      = image_tag "/images/主人公（メーター）.png", class:"w-100"
+    div.mission_info.z-in-2.d-flex.text-center
+      = @mission.title
+          
+    
 div.container-fluid.mb-3
   div.d-flex.mt-5.border-b
     h1.page-title.float-left.ml-5 Today's task
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border 今日のタスク
   div.container.px-0
     div.row
-      = render @tasks
+      - if @tasks.present?
+        = render @tasks
       - (5 - @tasks.count).times do
         = render partial: "no_task"
   div.mt-4
-    = link_to '今日の作業を終了する', new_mission_path, class: "btn-style-white-width w-100"
+    a.js-modal-open href="" data-target="modal_tasks_finish"
+      = button_to '今日の作業を終了する', class: "btn-style-white-width w-100"
 div.container-fluid.mb-3
-  div.d-flex.mt-5.border-b
+  div.d-flex.my-5.border-b
     h1.page-title.float-left.ml-5 Past task
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border 過去のタスク
   div.container.px-0
-    p 過去のタスクはありません
+    - if @pasttasks.present?
+      - @same_created_tasks.each do |sametask|
+        = render partial: 'same_created_task', locals: {sametask: sametask}
+    - else
+      h3.text-center.font-ferrum No task
+
 div.container-fluid.mb-3
-  div.d-flex.mt-5.border-b
+  div.d-flex.my-5.border-b
     h1.page-title.float-left.ml-5 Schedule
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border スケジュール
   div.container.px-0
-    p スケジュールはありません
+    h3.text-center.font-ferrum No shedule
 div.container-fluid.mb-3
-  div.d-flex.mt-5.border-b
+  div.d-flex.my-5.border-b
     h1.page-title.float-left.ml-5 Task's information
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border タスクの詳細
+  div.container-sm.px-5
+    div
+      div.d-flex.border-b.font-ferrum.w-25
+        h4.mr-5 All task
+        h4 #{@all_tasks.count}
+      div.d-flex
+        div.task-graph-complete
+        div.task-graph-incomplete
+    div
+      div.d-flex.border-b.font-ferrum.w-25
+        h4.mr-5 Mission schedule
+    
 
+
+div.modal.js-modal id="modal_tasks_finish"
+  div.modal__bg.js-modal-close
+  div.modal__content
+    div.container-fluid.mb-3.mt-3
+      h1.page-title-modal.w-100.text-center　本日の作業の終了
+    div.container.font-cl
+      div.row
+        div.d-block.mx-auto.text-center
+          p 本日の作業を終了しますか？
+          p.font-s-des-modal.text-danger 作業を終了すると変更できなくなります
+          div
+            button.js-modal-close.btn-style-modal.float-left 戻る
+            div.float-right
+              = button_to '終了', finish_mission_tasks_path(@mission), class: "btn-size", data: {confirm: "本日の作業を終了します"}
